KIK-1932, fix icon and text alignment

--- a/app/assets/less/layout/_main.less
+++ b/app/assets/less/layout/_main.less
@@ -475,7 +475,6 @@ input[type=search]:-ms-input-placeholder {
 		padding: 20px 34px 0 0;
 		position: relative;
 	}
-
 	.caret-holder {
 		right: 0;
 		bottom: 13px;
@@ -644,6 +643,15 @@ input[type=search]:-ms-input-placeholder {
 
 	} //	end media query
 
+}
+
+
+.stats {
+  .infoarea {
+    .number {
+      padding: 0px 34px 0 0;
+    }
+  }
 }
 
 .modal {
@@ -4593,7 +4601,7 @@ div[data-percentage],
 		position: relative;
 
 		[class^="icomoon-"], [class*=" icomoon-"] {
-			top: 20px;
+			top: 16px;
 			right: 20px;
 			font-size: 30px;
 			position: absolute;
